--- a/vignettes/rarity_indices.Rmd
+++ b/vignettes/rarity_indices.Rmd
@@ -43,7 +43,7 @@ str(aravo)
 
 ## Inputs of functions
 
-For each metric, the package includes two versions, depending on the input. 
+For each metric, the package includes two functions, depending on the input type. 
 Ecologist usually have to deal with site-species matrix, containing sites names as rows, species in columns and either abundances or presence/absence data (see example datasets in `vegan` or `ade4` packages for example). Thus, this matrix is needed as an input for each simple function.
 
 
@@ -54,7 +54,9 @@ mat = as.matrix(aravo$spe)
 mat[1:5, 1:5]
 ```
 
-In other cases, users can have a stacked data.frame containing columns for sites, species and abundances. This format can be used to have a better overview of the data and can be perceived as more intuitive. The package contains for each metric another function called `metricname_stack()` function that can take these stacked data.frames as inputs.
+`metricname()` functions can be used to compute indices directly on site-species matrices.
+
+In other cases, users can have a stacked (or tidy) data.frame containing columns for sites, species and abundances. This format can be used to have a better overview of the data and can be perceived as more intuitive. The package contains for each metric another function called `metricname_stack()` function that can take these stacked data.frames as inputs.
 
 `funrar` package includes two functions to go from one format to the other: `matrix_to_stack()` and `stack_to_matrix()`
 
@@ -71,7 +73,7 @@ identical(as.numeric(stack_to_matrix(dat, "site", "species", "value")), as.numer
 dat = dat[which(dat$value > 0), ]
 ```
 
-The package is also able to deal with big matrices by using a sparse matrix approach. For more details, see `sparse_matrices` vignette.
+The package is also able to deal with big matrices with many zeroes by using sparse matrices. For more details, see `sparse_matrices` vignette.
 
 
 
@@ -83,7 +85,7 @@ The indices rely on the computation of a distance matrix. It represents the func
 
 In order to compute distance matrix, species names must be specified as **rownames** in the traits table. And they will be named similarly in the distance matrix. Species names must be characters and not factors.
 
-The function relies on the `daisy()` function from package `cluster` and the default metric is Gower's distance to take into account ordinal, categorical and binary traits.
+The function relies on the `daisy()` function from package `cluster` and the default metric is Gower's distance to take into account ordinal, categorical and binary traits:
 
 ```{r}
 tra = aravo$traits[, c("Height", "SLA", "N_mass")]
@@ -93,12 +95,15 @@ dist_mat = compute_dist_matrix(tra)
 dist_mat[1:5, 1:5]
 ```
 
+Using the `metric` argument in `compute_dist_matrix()` you can specify other distance metrics (`euclidean` for Euclidean distances and `manhattan` for Manhattan distances) for functional distances. You can also compute your own distance matrix with other methods as long as it is a matrix and both row names and column names are species names.
 
-### Distinctiveness computation
+
+
+### Functional Distinctiveness computation
 
 #### Formula
 
-The distinctiveness measures how a species is locally functionally rare, in comparison with the other species of community. Each species (or individual) in each community will get a distinctiveness value. Distinctiveness values range from 0 to 1. A 0 value indicates that the focal species is not locally functionally distant from the other and conversely.
+The distinctiveness measures how a species is locally functionally rare, in comparison with the other species of community. Each species (or individual) in each community will get a distinctiveness value. Distinctiveness values range from 0 to 1. A value of 0 indicates that the focal species is not locally functionally distant from the other and conversely.
 
 From given functional distances, it is computed as such:
 
@@ -107,7 +112,6 @@ D_i = \frac{\sum_{\substack{j = 1, \\
                             i \neq j
                             }}^{N} d_{ij}}{N-1},
 $$
-
 with $D_i$ distinctiveness of species $i$, $d_{ij}$ the functional distance between species $i$ and species $j$, $N$ the number of species present in considered community.
 
 When weighted by abundances the formula becomes:
@@ -124,17 +128,17 @@ with the same terms as above, and $A_j$ the relative abundance of species $j$ in
 
 #### Computation with site-species matrix
 
-Using `funrar` distinctiveness values can be computed using function `distinctiveness()`:
+Using `funrar` functional distinctiveness can be computed using function `distinctiveness()`:
 
 ```{r distinctivenessComputation}
 # Compute distinctiveness for each species on each site
-di = distinctiveness(pres_matrix = mat,  # The site x species table
+di = distinctiveness(pres_matrix = mat,  # The site x species matrix
                      dist_matrix = dist_mat)  # Functional Distance matrix
 
 di[1:5, 1:5]
 ```
 
-The syntax for `distinctiveness()` is first the table and then the distance matrix. The function returns a site-species matrix filled with `Di` values, i.e. the species distinctiveness in each species per site combination.
+The syntax for `distinctiveness()` is first the matrix and then the functional distance matrix. The function returns a site-species matrix filled with `Di` values, i.e. the species functional distinctiveness in each species per site combination.
 
 #### Computation with stacked data.frame
 
@@ -225,7 +229,7 @@ dim(ui_df[!duplicated(ui_df$species), ])
 ```
 
 
-### Restrictedness
+### Geographical Restrictedness
 
 #### Formula
 
@@ -273,7 +277,7 @@ identical(all_ind$Si, si)
 
 # Plots
 
-In this section, some ideas to plot your results are presented.
+In this section, some ideas to plot your results are presented. For example the density of the various indices or a matrix visualization of the values of distinctiveness per species.
 
 ```{r}
 library(ggplot2)
