Following CRAN advices use microbenchmark conditionnally

--- a/vignettes/sparse_matrices.Rmd
+++ b/vignettes/sparse_matrices.Rmd
@@ -84,10 +84,9 @@ sparse matrices reduce the amount of RAM necessary to store them. The more zeros
 
 ## Benchmark
 
-We can now compare the performances of the algorithms in rarity indices computation between a sparse matrix and a regular one, using the popular `microbenchmark` R package:
+We can now compare the performances of the algorithms in rarity indices computation between a sparse matrix and a regular one, using the popular [`microbenchmark`](https://cran.r-project.org/package=microbenchmark) R package:
 
 ```{r microBenchDist}
-library(microbenchmark)
 library(funrar)
 
 # Get a table of traits
@@ -97,8 +96,11 @@ rownames(trait_df) = paste0("sp", 1:ncol(my_mat))
 # Compute distance matrix
 dist_mat = compute_dist_matrix(trait_df)
 
-microbenchmark(regular = distinctiveness(my_mat, dist_mat),
-               sparse = distinctiveness(sparse_mat, dist_mat))
+if (requireNamespace("microbenchmark", quietly = TRUE)) {
+  microbenchmark::microbenchmark(
+    regular = distinctiveness(my_mat, dist_mat),
+    sparse = distinctiveness(sparse_mat, dist_mat))
+}
 ```
 
 
@@ -138,19 +140,21 @@ mat_filling(all_mats$`99`$mat)
 Now we can compare the speed of the algorithms:
 
 ```{r, eval=FALSE}
-mat_bench = microbenchmark(
-  mat_0 = distinctiveness(all_mats$`0`$mat, dist_mat),
-  sparse_0 = distinctiveness(all_mats$`0`$sparse, dist_mat),
-  mat_1 = distinctiveness(all_mats$`1`$mat, dist_mat),
-  sparse_1 = distinctiveness(all_mats$`1`$sparse, dist_mat),
-  mat_2 = distinctiveness(all_mats$`2`$mat, dist_mat),
-  sparse_2 = distinctiveness(all_mats$`2`$sparse, dist_mat),
-  mat_49 = distinctiveness(all_mats$`49`$mat, dist_mat),
-  sparse_49 = distinctiveness(all_mats$`49`$sparse, dist_mat),
-  mat_99 = distinctiveness(all_mats$`99`$mat, dist_mat),
-  sparse_99 = distinctiveness(all_mats$`99`$sparse, dist_mat),
-  times = 5)
-
-autoplot(mat_bench)
+if (requireNamespace("microbenchmark", quietly = TRUE)) {
+  mat_bench = microbenchmark::microbenchmark(
+    mat_0 = distinctiveness(all_mats$`0`$mat, dist_mat),
+    sparse_0 = distinctiveness(all_mats$`0`$sparse, dist_mat),
+    mat_1 = distinctiveness(all_mats$`1`$mat, dist_mat),
+    sparse_1 = distinctiveness(all_mats$`1`$sparse, dist_mat),
+    mat_2 = distinctiveness(all_mats$`2`$mat, dist_mat),
+    sparse_2 = distinctiveness(all_mats$`2`$sparse, dist_mat),
+    mat_49 = distinctiveness(all_mats$`49`$mat, dist_mat),
+    sparse_49 = distinctiveness(all_mats$`49`$sparse, dist_mat),
+    mat_99 = distinctiveness(all_mats$`99`$mat, dist_mat),
+    sparse_99 = distinctiveness(all_mats$`99`$sparse, dist_mat),
+    times = 5)
+  
+  autoplot(mat_bench)
+}
 ```
 
