:bug: Fixed alternative distinctiveness with pres. and abs.

--- a/vignettes/new_distinctiveness.Rmd
+++ b/vignettes/new_distinctiveness.Rmd
@@ -76,23 +76,36 @@ alternative_distinctiveness = function(pres_mat, distance_obj, given_T) {
   kept_sp = funrar:::species_in_common(pres_mat, dist_mat)
   dist_mat = dist_mat[kept_sp, kept_sp, drop = FALSE]
   
+  
   # Correspondance matrix (tracking which species we want to keep)
   corr_dist = dist_mat
   corr_dist[dist_mat > given_T] = 0
   corr_dist[dist_mat <= given_T] = 1
   diag(corr_dist) = 0
   
-  di_mat = diag(dist_mat %*% corr_dist) / rowSums(corr_dist)
-  di_mat[rowSums(corr_dist) == 0] = 1
+  # Across sites
+  # given_pres is a vector of presences per site
+  di_mat = apply(pres_mat, 1, function(given_pres) {
+    index_mat = given_pres %*% (dist_mat * corr_dist)  # Sum of distances per species
+    denom_mat = given_pres %*% corr_dist  # Number of distances considered per species
+    index_mat = index_mat / denom_mat
+    index_mat[given_pres == 0] = NA
+    index_mat[is.nan(index_mat)] = 1
+    
+    return(index_mat)
+  })
   
-  dplyr::mutate(tibble::enframe(di_mat, "species", "Di"), T_value = given_T)
+  di_mat = t(di_mat)
+  dimnames(di_mat) = dimnames(pres_mat)
+  
+  dplyr::mutate(funrar::matrix_to_stack(di_mat, "Di"), given_range = given_T)
 }
 ```
 Here we truncate the distance matrix in order to "nullify" the effect of species that are not in specified range.
 
 ```{r}
-presence_matrix = matrix(rep(1, 3), nrow = 1, ncol = 3,
-                         dimnames = list(site = "s1",
+presence_matrix = matrix(c(rep(1, 3), 1, 0, 1, 1, 1, 0), nrow = 3, ncol = 3,
+                         dimnames = list(site = c("s1", "s2", "s3"),
                                          species = c("a", "b", "c")))
 
 # Test over a ragne of possible T values
@@ -108,11 +121,10 @@ We can visualize those relationships:
 ```{r}
 library(ggplot2)
 
-ggplot(all_T, aes(T_value, Di, color = species)) +
-  geom_line(size = 2) +
-  xlim(0, 1.5) +
-  ylim(0, 1.5) +
-  labs(x = "Fixed T range",
+ggplot(all_T, aes(given_range, Di, color = species)) +
+    geom_line(size = 1, alpha = 1/2) +
+    facet_grid(~site) +
+  labs(x = "Fixed distance range",
        y = "Functional Distinctiveness",
        color = "Species")
 ```
@@ -138,6 +150,8 @@ tra = aravo$traits[, c("Height", "SLA", "N_mass")]
 dist_mat = compute_dist_matrix(tra, metric = "gower")
 dist_mat = (dist_mat - min(dist_mat))/diff(range(dist_mat))
 
+names(dimnames(mat)) = c("site", "species")
+
 # Compute different values of distinctiveness using various ranges
 all_ranges = lapply(seq(0, 1, length.out = 50), function(given_range) {
   alternative_distinctiveness(mat, as.dist(dist_mat), given_range)
@@ -149,9 +163,11 @@ all_ranges = dplyr::bind_rows(all_ranges)
 Now we can visualize the influence of the trait range value
 
 ```{r}
-ggplot(all_ranges, aes(T_value, Di, group = species)) +
+ggplot(subset(all_ranges, site %in% c("AR07", "AR51", "AR02")),
+       aes(given_range, Di, group = species)) +
   geom_line(alpha = 1/3) +
-  labs(x = "Minimum Distance Range Considered\n(Trait Range)",
+  facet_wrap(~site) +
+  labs(x = "Maximum Distance Range Considered\n(Trait Range)",
        y = "Functional Distinctiveness")
 ```
 
@@ -159,10 +175,13 @@ We see that species have close neighbors at different distances (leap from top l
 
 As proposed we can also distinctiveness relative to trait range and see what it changes:
 ```{r scaled_range}
-all_ranges = dplyr::mutate(all_ranges, scaled_Di = ifelse(Di != 1, Di / T_value, Di))
+all_ranges = dplyr::mutate(all_ranges, scaled_Di =
+                             ifelse(Di != 1, Di / given_range, Di))
 
-ggplot(all_ranges, aes(T_value, scaled_Di, group = species)) +
+ggplot(subset(all_ranges, site %in% c("AR07", "AR51", "AR02")),
+       aes(given_range, scaled_Di, group = species)) +
   geom_line(alpha = 1/4) +
+  facet_wrap(~site) +
   labs(x = "Considered Trait Range\n(Functional Distance)",
        y = "Scaled Functional Distinctiveness\n(over trait range)")
 ```
